--- a/src/main/frontend/components/journal.css
+++ b/src/main/frontend/components/journal.css
@@ -4,6 +4,7 @@
   textarea {
     word-break: break-word;
     overflow: hidden;
+    resize: none;
   }
 
   .journal-item {
