--- a/src/main/frontend/components/sidebar.css
+++ b/src/main/frontend/components/sidebar.css
@@ -46,6 +46,7 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  padding-bottom: 30px;
 }
 
 .cp__sidebar-main-layout {
